--- a/templates/base.html
+++ b/templates/base.html
@@ -1,14 +1,24 @@
 <html>
     <head>
-        <title>Application form</title>
+        
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Workout</title>
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+        <link rel="stylesheet" href="{{url_for('static',filename='style.css')}}">
+        <link rel="icon" type="text/css" href="static/favicon.ico">
     </head>
     <body>
+    
 
-
-        <nav class="navbar navbar-expand-lg bg-light">
+        <div style="background-color: black;">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark" >
             <div class="container-fluid">
-              <a class="navbar-brand" href="https://www.swecha.org/" target="_blank" rel="noopener noreferrer">Swecha</a>
+              <img class="navimg"  src="{{ url_for('static', filename='gokunav.png') }}"></img>
+              <a class="navbar-brand" href="/" target="_blank" rel="noopener noreferrer" style="font-family: cursive;">WorkOut</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -18,33 +28,26 @@
                     <a class="nav-link active" aria-current="page" href="/">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="/database">Database</a>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Learn
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="#">About</a></li>
-                      <li><a class="dropdown-item" href="#">Profile</a></li>
-                      <li><hr class="dropdown-divider"></li>
-                      <li><a class="dropdown-item" href="#">Settings</a></li>
-                    </ul>
-                  </li>
-                  
+                    <a class="nav-link active" href="/database">Users</a>
+                  </li>                  
                 </ul>
-                <form class="d-flex" role="search">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-primary" type="submit">Search</button>
-                </form>
               </div>
             </div>
           </nav>
+        </div> 
         {% block body %}
-                   
+        
         {% endblock body %}
 
         
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     </body>
+    <script>
+      var date = new Date();
+      var year = date.getFullYear();
+      var month = String(date.getMonth()+1).padStart(2,'0');
+      var todayDate = String(date.getDate()).padStart(2,'0');
+      var datePattern = year + '-' + month + '-' + todayDate;
+      document.getElementById("date").value = datePattern;
+    </script>
 </html>
