--- a/templates/database.html
+++ b/templates/database.html
@@ -4,36 +4,42 @@
 {% block body %}
 
 {% if allTodo|length==0  %}
-            <div class="alert alert-dark" role="alert">
+            <div class="alert alert-warning" role="alert">
               Please Add a Entry!
             </div>
+            <img class="cat" src="{{ url_for('static',filename='goku.png') }} " >
+            
+
           {% else %}
-          <table class="table table-striped">
+          <table class="table table-striped" >
             <thead>
               <tr>
                 <th scope="col">SNo</th>
-                <th scope="col">Name</th>
-                <th scope="col">Email ID</th>
-                <th scope="col">Contact</th>
-                <th scope="col">College Name</th>
-                <th scope="col">College Address</th>
-                <!-- <th scope="col">Time</th> -->
+                <th scope="col">Date</th>
+                <th scope="col">Push</th>
+                <th scope="col">Pull</th>
+                <th scope="col">Legs</th>
+                <th scope="col">Abs</th>
+                <th scope="col">Cardio</th>
+                <th scope="col">Protien</th>
+                <th scope="col">Options</th>
               </tr>
             </thead>
             <tbody>
                 {% for todo in allTodo %}
                 <tr>
-                    <th scope="row">{{loop.index}}</th>
-                    <td>{{todo.title}}</td>
-                    <td>{{todo.desc}}</td>
-                    <td>{{todo.contact}}</td>
-                    <td>{{todo.collegename}}</td>
-                    <td>{{todo.collegeaddress}}</td>
-                    <!-- <td>{{todo.date_created}}</td> -->
-                    <td>
-                      <a href="/update/{{todo.sno}}" type="button" class="btn btn-outline-dark btn-sm mx-1">Update</button>
-                      <a href="/delete/{{todo.sno}}" type="button" class="btn btn-outline-dark btn-sm mx-1">Delete</button>
-                    </td>
+                  <th scope="row">{{loop.index}}</th>
+                  <td>{{todo.date}}</td>
+                  <td>{{todo.push}}</td>                  
+                  <td>{{todo.pull}}</td>
+                  <td>{{todo.legs}}</td>
+                  <td>{{todo.abs}}</td>
+                  <td>{{todo.cardio}}</td>
+                  <td>{{todo.protien}}</td>
+                  <td>
+                    <a href="/update/{{todo.sno}}" style="margin: 3px;" type="button" class="btn btn-outline-dark btn-sm mx-1">Update</button>
+                    <a href="/delete/{{todo.sno}}" style="margin: 3px;" type="button" class="btn btn-outline-dark btn-sm mx-1">Delete</button>
+                  </td>
                   </tr>                     
             
           {% endfor %} 
